bench_output.log
   Compiling twister v0.5.0 (/app)
error[E0432]: unresolved import `crate::data_contracts`
 --> src/ml/pattern_discovery.rs:3:12
  |
3 | use crate::data_contracts::ForensicEventData;
  |            ^^^^^^^^^^^^^^ unresolved import
  |
help: a similar path exists
  |
3 | use crate::ml::data_contracts::ForensicEventData;
  |            ++++

warning: unused import: `serde_json::Value`
 --> src/ai/query_tools.rs:4:5
  |
4 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary parentheses around method argument
  --> src/ai/query_tools.rs:43:30
   |
43 | ...rget_rad", (target_azimuth * std::f64::consts::PI / 180.0));
   |               ^                                             ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
43 -         .param("target_rad", (target_azimuth * std::f64::consts::PI / 180.0));
43 +         .param("target_rad", target_azimuth * std::f64::consts::PI / 180.0 );
   |

warning: unused import: `std::fs`
 --> src/ml/event_corpus.rs:5:5
  |
5 | use std::fs;
  |     ^^^^^^^

warning: unused imports: `BufRead` and `BufReader`
 --> src/ml/event_corpus.rs:6:15
  |
6 | use std::io::{BufRead, BufReader};
  |               ^^^^^^^  ^^^^^^^^^

warning: unused import: `burn::tensor::Device`
 --> src/ml/event_corpus.rs:7:5
  |
7 | use burn::tensor::Device;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Bool` and `Float`
 --> src/ml/pattern_discovery.rs:5:20
  |
5 | use burn::tensor::{Bool, Int, Float};
  |                    ^^^^       ^^^^^

warning: unused import: `burn::backend::Wgpu`
 --> src/ml/wav2vec2_loader.rs:1:5
  |
1 | use burn::backend::Wgpu;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused imports: `DateTime` and `Utc`
 --> src/knowledge_graph/cognee_schema.rs:1:14
  |
1 | use chrono::{DateTime, Utc};
  |              ^^^^^^^^  ^^^

warning: variable does not need to be mutable
  --> src/ml/event_corpus.rs:25:13
   |
25 |         let mut wav2vec2 = Wav2Vec2Model::<Wgpu>::load(&device).await?;
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `distance`
   --> src/physics/voxel_grid.rs:175:38
    |
175 |     pub fn average_along_path(&self, distance: f32) -> f32 {
    |                                      ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_distance`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `k2`
  --> src/physics/rf_propagation.rs:34:13
   |
34 |         let k2 = k * k;
   |             ^^ help: if this is intentional, prefix it with an underscore: `_k2`

warning: unused variable: `local_k2`
  --> src/physics/rf_propagation.rs:69:29
   |
69 |                         let local_k2 = local_k * local_k;
   |                             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_local_k2`

warning: value assigned to `response` is never read
  --> src/ai/reasoning_engine.rs:33:28
   |
33 |         let mut response = String::new();
   |                            ^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `args`
  --> src/ai/query_tools.rs:28:29
   |
28 |     async fn execute(&self, args: &str, graph: &Arc<KnowledgeGraphClient...
   |                             ^^^^ help: if this is intentional, prefix it with an underscore: `_args`

For more information about this error, try `rustc --explain E0432`.
warning: `twister` (lib) generated 14 warnings
error: could not compile `twister` (lib) due to 1 previous error; 14 warnings emitted
